Removed Pages subfolder

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
                 <ul class="nav_links">
                     <li class="active"> <a href="index.html">Home</a> </li>
-                    <li> <a href="/Pages/reviews.html">Reviews</a> </li>
-                    <li> <a href="/Pages/news.html">News</a>
+                    <li> <a href="/reviews.html">Reviews</a> </li>
+                    <li> <a href="/news.html">News</a>
                         <ul class="drop-menu">
-                            <li><a href="/Pages/trending.html">Trending</a></li>
-                            <li><a href="/Pages/upcoming.html">Upcoming</a></li>
+                            <li><a href="/trending.html">Trending</a></li>
+                            <li><a href="/upcoming.html">Upcoming</a></li>
                         </ul>
                     </li>
-                    <li> <a href="/Pages/community.html">Community</a> </li>
-                    <li> <a href="/Pages/contact.html">Contact</a> </li>
+                    <li> <a href="/community.html">Community</a> </li>
+                    <li> <a href="/contact.html">Contact</a> </li>
                 </ul>
             </nav>
         </section>
