--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <input type="checkbox" id="menu-toggle">
 
                 <ul class="nav_links">
-                    <li> <a href="../index.html">Home</a> </li>
+                    <li> <a href="index.html">Home</a> </li>
                     <li> <a href="reviews.html">Reviews</a> </li>
                     <li> <a href="news.html">News</a>
                         <ul class="drop-menu">
