--- a/reviews.html
+++ b/reviews.html
@@ -20,7 +20,7 @@
                 <label for="menu-toggle"><img class="burger" src="../media/burger.png" alt=""></label>
                 <input type="checkbox" id="menu-toggle">
                 <ul class="nav_links">
-                    <li> <a href="../index.html">Home</a> </li>
+                    <li> <a href="index.html">Home</a> </li>
                     <li class="active"> <a href="reviews.html">Reviews</a> </li>
                     <li> <a href="news.html">News</a>
                         <ul class="drop-menu">
