--- a/community.html
+++ b/community.html
@@ -16,8 +16,8 @@
             <h3 class="hidden">Header</h3>
             <nav>
                 <h4 class="hidden">Navbar</h4>
-                <img class="logo" src="../media/logo.png" alt="A technology enthusiast site">
-                <label for="menu-toggle"><img class="burger" src="../media/burger.png" alt=""></label>
+                <img class="logo" src="media/logo.png" alt="A technology enthusiast site">
+                <label for="menu-toggle"><img class="burger" src="media/burger.png" alt=""></label>
                 <input type="checkbox" id="menu-toggle">
 
                 <ul class="nav_links">
@@ -40,7 +40,7 @@
 
         <section class="community-text">
             <div class="banner">
-                <img src="../media/community.jpg" alt="">
+                <img src="media/community.jpg" alt="">
             </div>
 
             <div class="drive">
@@ -61,7 +61,7 @@
                     nostrum excepturi possimus fuga iusto sapiente enim sed distinctio harum. Lorem ipsum dolor sit amet
                     consectetur adipisicing elit. </p>
             </div>
-            <div class="like"><img src="../media/like.png" alt="">
+            <div class="like"><img src="media/like.png" alt="">
                 <p>Join our community</p>
             </div>
 
@@ -74,9 +74,9 @@
             <div class="footer-span">
                 <h2 class="hidden">Footer</h2>
 
-                <a href="https://twitter.com/home?lang=en"><img src="../media/twitter.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="../media/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="../media/instagram.png" alt=""></a>
+                <a href="https://twitter.com/home?lang=en"><img src="media/twitter.png" alt=""></a>
+                <a href="https://www.facebook.com/"><img src="media/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="media/instagram.png" alt=""></a>
             </div>
         </footer>
     </main>
