--- a/news.html
+++ b/news.html
@@ -16,8 +16,8 @@
             <h3 class="hidden">Header</h3>
             <nav>
                 <h4 class="hidden">Navbar</h4>
-                <img class="logo" src="../media/logo.png" alt="A technology enthusiast site">
-                <label for="menu-toggle"><img class="burger" src="../media/burger.png" alt=""></label>
+                <img class="logo" src="media/logo.png" alt="A technology enthusiast site">
+                <label for="menu-toggle"><img class="burger" src="media/burger.png" alt=""></label>
                 <input type="checkbox" id="menu-toggle">
                 <ul class="nav_links">
                     <li> <a href="index.html">Home</a> </li>
@@ -40,7 +40,7 @@
         <section class="news">
             <div class="news-img">
                 <h1>ASUS ROG Zephyrus G14</h1>
-                <img src="../media/g14.jpg" alt="">
+                <img src="media/g14.jpg" alt="">
             </div>
             <div class="table">
 
@@ -129,9 +129,9 @@
         <div class="footer-span">
             <h2 class="hidden">Footer</h2>
 
-            <a href="https://twitter.com/home?lang=en"><img src="../media/twitter.png" alt=""></a>
-            <a href="https://www.facebook.com/"><img src="../media/facebook.png" alt=""></a>
-            <a href="https://www.instagram.com/"><img src="../media/instagram.png" alt=""></a>
+            <a href="https://twitter.com/home?lang=en"><img src="media/twitter.png" alt=""></a>
+            <a href="https://www.facebook.com/"><img src="media/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="media/instagram.png" alt=""></a>
         </div>
     </footer>
 
