--- a/reviews.html
+++ b/reviews.html
@@ -16,8 +16,8 @@
             <h3 class="hidden">Header</h3>
             <nav>
                 <h4 class="hidden">Navbar</h4>
-                <img class="logo" src="../media/logo.png" alt="A technology enthusiast site">
-                <label for="menu-toggle"><img class="burger" src="../media/burger.png" alt=""></label>
+                <img class="logo" src="media/logo.png" alt="A technology enthusiast site">
+                <label for="menu-toggle"><img class="burger" src="media/burger.png" alt=""></label>
                 <input type="checkbox" id="menu-toggle">
                 <ul class="nav_links">
                     <li> <a href="index.html">Home</a> </li>
@@ -45,7 +45,7 @@
                     <ul class="grid-review">
                         <li>
                             <div class="card">
-                                <img src=" ../media/laptop.jpg" alt="">
+                                <img src=" media/laptop.jpg" alt="">
                                 <div class="card-content">
                                     <h3 class="card-title">Laptops</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos nisi sed
@@ -57,7 +57,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <img src="../media/rig.jpg" alt="">
+                                <img src="media/rig.jpg" alt="">
                                 <div class="card-content">
                                     <h3 class="card-title">Rigs</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos nisi sed
@@ -69,7 +69,7 @@
                         </li>
                         <li>
                             <div class="card">
-                                <img src="../media/cpu.jpg" alt="">
+                                <img src="media/cpu.jpg" alt="">
                                 <div class="card-content">
                                     <h3 class="card-title">CPU</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos nisi sed
@@ -84,7 +84,7 @@
                 </div>
                 <aside class="aside-review">
 
-                    <img src="../media/gmail.png" alt="">
+                    <img src="media/gmail.png" alt="">
                     <h3>Be in the Know</h3>
 
                     <p>Get instant acces to breaking new, new reviews and great deals.</p>
@@ -105,9 +105,9 @@
             <div class="footer-span">
                 <h2 class="hidden">Footer</h2>
 
-                <a href="https://twitter.com/home?lang=en"><img src="../media/twitter.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="../media/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="../media/instagram.png" alt=""></a>
+                <a href="https://twitter.com/home?lang=en"><img src="media/twitter.png" alt=""></a>
+                <a href="https://www.facebook.com/"><img src="media/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="media/instagram.png" alt=""></a>
             </div>
         </footer>
     </main>
